# big-brain

./: .gitignore  AGENTS.md  README.md  hooks.json  main.py  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
cli/: __init__.py  agent.py  chat.py  init.py  notes_cmd.py  status.py
core/: __init__.py  config.py  git_sync.py  inference.py  linker.py  notes.py  session.py
hooks/: hooks.json
scripts/: big-brain-pre-compact.sh  big-brain-session-end.sh  big-brain-session-start.sh
skills/big-brain/: SKILL.md
tests/: test_agent.py  test_config.py  test_git_sync.py  test_inference.py  test_notes.py  test_session.py  test_slugify.py
utils/: __init__.py  frontmatter.py  slugify.py  ui.py
